Fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,22 @@
   box-sizing: border-box;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+*::-webkit-scrollbar{
+  width: 6px;
+  height: 6px;
 
+}
+*::-webkit-scrollbar-thumb{
+  background-color: #2C2C30;
+  height: 6px;
+  width: 6px;
+
+}
+*::-webkit-scrollbar-track {
+  background-color: #1E1E20;
+  height: 6px;
+  width: 6px;
+}
 :root {
   font-size: 10px;
 }
